; ModuleID = '/home/carl/AnghaBench/lwan/src/lib/extr_lwan-template.c_lex_init.c'
source_filename = "/home/carl/AnghaBench/lwan/src/lib/extr_lwan-template.c_lex_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lexer = type { i8*, i8*, i32, i32, i32 }

@lex_text = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.lexer*, i8*)* @lex_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @lex_init(%struct.lexer* %0, i8* %1) #0 {
  %3 = alloca %struct.lexer*, align 8
  %4 = alloca i8*, align 8
  store %struct.lexer* %0, %struct.lexer** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i32, i32* @lex_text, align 4
  %6 = load %struct.lexer*, %struct.lexer** %3, align 8
  %7 = getelementptr inbounds %struct.lexer, %struct.lexer* %6, i32 0, i32 4
  store i32 %5, i32* %7, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = load %struct.lexer*, %struct.lexer** %3, align 8
  %10 = getelementptr inbounds %struct.lexer, %struct.lexer* %9, i32 0, i32 1
  store i8* %8, i8** %10, align 8
  %11 = load %struct.lexer*, %struct.lexer** %3, align 8
  %12 = getelementptr inbounds %struct.lexer, %struct.lexer* %11, i32 0, i32 0
  store i8* %8, i8** %12, align 8
  %13 = load i8*, i8** %4, align 8
  %14 = call i32 @rawmemchr(i8* %13, i8 signext 0)
  %15 = load %struct.lexer*, %struct.lexer** %3, align 8
  %16 = getelementptr inbounds %struct.lexer, %struct.lexer* %15, i32 0, i32 3
  store i32 %14, i32* %16, align 4
  %17 = load %struct.lexer*, %struct.lexer** %3, align 8
  %18 = getelementptr inbounds %struct.lexer, %struct.lexer* %17, i32 0, i32 2
  %19 = call i32 @lexeme_ring_buffer_init(i32* %18)
  ret void
}

declare dso_local i32 @rawmemchr(i8*, i8 signext) #1

declare dso_local i32 @lexeme_ring_buffer_init(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
